syntax = "proto3";

import "google/protobuf/timestamp.proto";

package order;

option go_package = "proto/";

service OrderService {
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc GetOrderCreationResources(GetOrderCreationResourcesRequest) returns (GetOrderCreationResourcesResponse);
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

message ListOrdersRequest {}

message ListOrdersResponse {
    repeated Order orders = 1;
}

message GetOrderCreationResourcesRequest {}

message GetOrderCreationResourcesResponse {
    repeated Customer customers = 1;
    repeated CatalogItem items = 2;
}

message CreateOrderRequest {
    string customerId = 1;
    repeated OrderLine orderLines = 2;
}

message CreateOrderResponse {}

message DeleteOrderRequest {
    string orderId = 1;
}

message DeleteOrderResponse {}

message Order {
    string id = 1;
    Customer customer = 2;
    google.protobuf.Timestamp order_date = 3;
    repeated OrderLine orderLines = 4;
    double total_price = 5;
}

message OrderLine {
    int32 count = 1;
    CatalogItem item = 2;
}

message Customer {
    string id = 1;
    string name = 2;
    string email = 3;
    string street = 4;
    string city = 5;
    string country = 6;
}

message CatalogItem {
    string id = 1;
    string name = 2;
    double price = 3;
}